fix alignments

--- a/stlye.css
+++ b/stlye.css
@@ -35,6 +35,7 @@ body {
 
 header {
     margin-bottom: -10px;
+    margin: 0 auto;
     width: 100vw;
     padding: 10px 10vw;
     display: flex;
